# repnex_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repnex-agent.py  repnex_sql_templates_2988.json  requirements.txt
app/: main.py
app/api/: router.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py  middleware.py  pinecone_client.py  rate_limiter.py  redis.py
app/engine/: __init__.py  executor.py  mongo_executor.py  parameter_binder.py
app/llm/: client.py  insight_generator.py  intent_classifier.py  intent_extractor.py  suggestion_generator.py  title_generator.py
app/migrations/: alembic.ini  env.py
app/query_engine/: executor.py  parameter_binder.py  semantic_resolver.py  template_loader.py
app/schemas/: auth.py  common.py  connection.py  dashboard.py  organization.py  query.py  report.py  session.py  user.py  websocket.py
app/services/: adapter_generator_service.py  auth_service.py  connection_service.py  dashboard_service.py  (+10 more)
docs/: 01-overview.md  02-quickstart.md  03-architecture.md  04-module-api.md  04-module-core.md  04-module-database.md  04-module-llm.md  04-module-query-engine.md  04-module-schemas.md  04-module-services.md  05-api-reference.md  06-deployment.md  07-development.md  08-security.md  09-data-execution-and-gateway-flows.md  10-template-execution-deep-dive.md  README.md
scratch/: debug_pg.py  insert_demo_reports.py  seed_mock_tables.py  test_syspro_db.py
scripts/: reingest_pinecone.py  search_pinecone.py  test_end_to_end_query.py  test_search_quality.py
(+2757 files in other folders)
